# salesforce-mcp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py  context.py  response.py  schemas.py  settings.py
src/auth/: oauth.py  router.py  token_manager.py
src/health/: router.py
src/mcp_server/: server.py
src/salesforce/: client.py  router.py  service.py  tools.py
