[project]
name = "salesforce-mcp"
version = "0.1.0"
description = "Salesforce MCP Server — FastAPI + FastMCP + Docker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "simple-salesforce>=1.12.6",
    "mcp>=1.9.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
